--- a/app/views/top_menus/_form.html.erb
+++ b/app/views/top_menus/_form.html.erb
@@ -3,4 +3,5 @@
 <div class="box tabular">
   <p><%= f.text_field :description, :label => :field_descrizione, :required => true, :size => 60 %></p>
   <p><%= f.text_field :order, :label => :field_ordinamento, :size => 3 %></p>
+  <p><%= f.text_field :key, :label => :field_key, :size => 10 %></p>
 </div>
