--- a/app/views/top_menus/show.html.erb
+++ b/app/views/top_menus/show.html.erb
@@ -20,6 +20,9 @@
     <p>
         <%= l(:label_ordinamento) %>: <%=h @top_menu.order %>
     </p>
+    <p>
+        <%= l(:label_key) %>: <%=h @top_menu.key %>
+    </p>
 
   </fieldset>
 </div>
