--- a/app/views/admin/projects.html.erb
+++ b/app/views/admin/projects.html.erb
@@ -2,7 +2,7 @@
 <%= link_to l(:label_project_new), {:controller => 'projects', :action => 'new'}, :class => 'icon icon-add' %>
 </div>
 
-<h2><%=l(:label_project_plural)%></h2>
+<h2 title='<%=l(:orderedby_created_desc)%>'><%=l(:label_project_plural)%></h2>
 
 <% form_tag({}, :method => :get) do %>
 <fieldset><legend><%= l(:label_filter_plural) %></legend>
