--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -9,7 +9,7 @@
     <%= link_to l(:label_overall_activity), { :controller => 'activities', :action => 'index' }%>
 </div>
 
-<h2><%=l(:label_project_plural)%></h2>
+<h2 title='<%=l(:orderedby_updated_desc)%>'><%=l(:label_project_plural)%></h2>
 
 <%= render_project_hierarchy(@projects)%>
 
