voci campi: da .titolo a .subject , da  .testo a .description

--- a/app/views/editorial/_articoli.html.erb
+++ b/app/views/editorial/_articoli.html.erb
@@ -8,8 +8,8 @@
                   <span class="fs-art-sezione">&nbsp;<%= articolo.top_section %>&nbsp;::&nbsp;<%= articolo.section %></span>
                   <span class="fs-postdateicon" style="float:right;"><%# articolo.due_date %> <%= I18n.localize(articolo.due_date.to_date, :format => :mese_anno) %></span>
                   <h5 class="fs-postheader">
-                    <%= link_to(h(smart_truncate(articolo.titolo, 110)),
-                                url_for(:controller => 'editorial', :action => "articolo", :topmenu_key => articolo.section.top_section.top_menu.key, :topsection_key => articolo.section.top_section.key, :article_id => articolo.id.to_s, :article_slug => h(truncate(articolo.titolo, :length => 125).to_slug), :escape => false))
+                    <%= link_to(h(smart_truncate(articolo.subject, 110)),
+                                url_for(:controller => 'editorial', :action => "articolo", :topmenu_key => articolo.section.top_section.top_menu.key, :topsection_key => articolo.section.top_section.key, :article_id => articolo.id.to_s, :article_slug => h(truncate(articolo.subject, :length => 125).to_slug), :escape => false))
                     %>
                   </h5>
                 </div>
@@ -24,9 +24,9 @@
                               image_tag("/images/commons/sections/no-img.jpg")
                             end
                           else
-                            image_tag(articolo.immagine_url, :alt => h(truncate(articolo.titolo, :length => 25)))
+                            image_tag(articolo.immagine_url, :alt => h(truncate(articolo.subject, :length => 25)))
                           end
-                          #   image_tag(articolo.immagine_url, :alt => h(truncate(articolo.titolo, :length => 25)))
+                          #   image_tag(articolo.immagine_url, :alt => h(truncate(articolo.subject, :length => 25)))
                           # end
                       %>
                       <% if articolo.se_protetto %>
@@ -51,7 +51,7 @@
                     </div>
                     <%= articolo.riassunto %>
                     <br/>
-                    <%= link_to "Continua... ", url_for(:controller => 'editorial', :action => "articolo", :topmenu_key => articolo.section.top_section.top_menu.key, :topsection_key => articolo.section.top_section.key, :article_id => articolo.id.to_s, :article_slug => h(truncate(articolo.titolo, :length => 125).to_slug), :escape => false) %>
+                    <%= link_to "Continua... ", url_for(:controller => 'editorial', :action => "articolo", :topmenu_key => articolo.section.top_section.top_menu.key, :topsection_key => articolo.section.top_section.key, :article_id => articolo.id.to_s, :article_slug => h(truncate(articolo.subject, :length => 125).to_slug), :escape => false) %>
                   </div>
                 </div>
 
