--- a/app/views/editorial/_articolo_teaser.html.erb
+++ b/app/views/editorial/_articolo_teaser.html.erb
@@ -4,8 +4,8 @@
       <div class="fs-postmetadataheader">
         <span class="fs-art-sezione">&nbsp;<%= articolo.top_section %>&nbsp;::&nbsp;<%= articolo.section %></span>
         <h5 class="fs-postheader">
-          <%= link_to(h(smart_truncate(articolo.titolo, 110)),
-                       url_for(:controller => 'editorial', :action => "articolo", :topmenu_key => articolo.section.top_section.top_menu.key, :topsection_key => articolo.section.top_section.key, :article_id => articolo.id.to_s, :article_slug => h(truncate(articolo.titolo, :length => 125).to_slug), :escape => false))
+          <%= link_to(h(smart_truncate(articolo.subject, 110)),
+                       url_for(:controller => 'editorial', :action => "articolo", :topmenu_key => articolo.section.top_section.top_menu.key, :topsection_key => articolo.section.top_section.key, :article_id => articolo.id.to_s, :article_slug => h(truncate(articolo.subject, :length => 125).to_slug), :escape => false))
           %>
         </h5>
       </div>
@@ -17,12 +17,12 @@
                  <%= if articolo.immagine_url.nil?
                         '<h3>no image</h3>'
                       else
-                        image_tag(articolo.immagine_url, :alt => h(truncate(articolo.titolo, :length => 12)), :style => "width:200px", :class => "image-caption-wrapper")
+                        image_tag(articolo.immagine_url, :alt => h(truncate(articolo.subject, :length => 12)), :style => "width:200px", :class => "image-caption-wrapper")
                       end
                   %>
                 <%= articolo.riassunto %>
                 <br/>
-                <%= link_to "Continua... ", url_for(:controller => 'editorial', :action => "articolo", :topmenu_key => articolo.section.top_section.top_menu.key, :topsection_key => articolo.section.top_section.key, :article_id => articolo.id.to_s, :article_slug => h(truncate(articolo.titolo, :length => 125).to_slug), :escape => false) %>
+                <%= link_to "Continua... ", url_for(:controller => 'editorial', :action => "articolo", :topmenu_key => articolo.section.top_section.top_menu.key, :topsection_key => articolo.section.top_section.key, :article_id => articolo.id.to_s, :article_slug => h(truncate(articolo.subject, :length => 125).to_slug), :escape => false) %>
               </div>
             </div>
 
