--- a/app/views/editorial/_viste_non_utilizzate/_save/_articolo_pinned.html.erb
+++ b/app/views/editorial/_viste_non_utilizzate/_save/_articolo_pinned.html.erb
@@ -5,8 +5,8 @@
     <div class="fs-content-layout-row">
       <div class="fs-layout-cell layout-item-0" style="width: 100%">
         <h6 style="font-size:12px; ">
-          <%= link_to (h(truncate(articolo.titolo, :length => 50)),
-                       url_for(:controller => 'editorial', :action => "articolo", :topmenu_key => articolo.section.top_section.top_menu.key, :topsection_key => articolo.section.top_section.key, :article_id => articolo.id.to_s, :article_slug => h(truncate(articolo.titolo, :length => 125).to_slug), :escape => false))
+          <%= link_to (h(truncate(articolo.subject, :length => 50)),
+                       url_for(:controller => 'editorial', :action => "articolo", :topmenu_key => articolo.section.top_section.top_menu.key, :topsection_key => articolo.section.top_section.key, :article_id => articolo.id.to_s, :article_slug => h(truncate(articolo.subject, :length => 125).to_slug), :escape => false))
           %>
         </h6>
          <%# articolo.section.issues.count %>
@@ -18,10 +18,10 @@
         <div class="fs-postcontent" style="line-height:11px; font-size:11px;">
 
           <%= link_to (h(truncate(articolo.riassunto, :length => 125)),
-              url_for(:controller => 'editorial', :action => "articolo", :topmenu_key => articolo.section.top_section.top_menu.key, :topsection_key => articolo.section.top_section.key, :article_id => articolo.id.to_s, :article_slug => h(truncate(articolo.titolo, :length => 125).to_slug), :escape => false))
+              url_for(:controller => 'editorial', :action => "articolo", :topmenu_key => articolo.section.top_section.top_menu.key, :topsection_key => articolo.section.top_section.key, :article_id => articolo.id.to_s, :article_slug => h(truncate(articolo.subject, :length => 125).to_slug), :escape => false))
           %>
           <br/></div>
-        <%# link_to "Continua... ", url_for(:controller => 'editorial', :action => "articolo", :topmenu_key => articolo.section.top_section.top_menu.key, :topsection_key => articolo.section.top_section.key, :article_id => articolo.id.to_s, :article_slug => h(truncate(articolo.titolo, :length => 125).to_slug), :escape => false) %>
+        <%# link_to "Continua... ", url_for(:controller => 'editorial', :action => "articolo", :topmenu_key => articolo.section.top_section.top_menu.key, :topsection_key => articolo.section.top_section.key, :article_id => articolo.id.to_s, :article_slug => h(truncate(articolo.subject, :length => 125).to_slug), :escape => false) %>
         <p style="border-bottom: 1px dotted #A8ADB8; padding-bottom: 5px"></p>
       </div>
     </div>
