--- a/app/views/editorial/_viste_non_utilizzate/_save/ediz_indice.html.erb
+++ b/app/views/editorial/_viste_non_utilizzate/_save/ediz_indice.html.erb
@@ -13,7 +13,7 @@
 <% last_tops=0
    ancora =""%>
 <% @art.each do |nart| %>
-    <% ancora = h(truncate(nart.titolo, :length => 20).to_slug) %>
+    <% ancora = h(truncate(nart.subject, :length => 20).to_slug) %>
 
 <table width="612" border="0" cellpadding="0" cellspacing="0">
 <% if (last_tops != nart.section.top_section_id) %><br />
@@ -49,7 +49,7 @@
           <td  align="left" valign="center">
 
             <font style="font-family:Arial, Helvetica, sans-serif; font-size:14px;">
-              <strong>   <%= link_to(h(nart.titolo ), url_for(:anchor => ancora), :style => 'color:#333333; text-decoration: none;') %> </strong></font><br/>
+              <strong>   <%= link_to(h(nart.subject ), url_for(:anchor => ancora), :style => 'color:#333333; text-decoration: none;') %> </strong></font><br/>
           </td>
         </tr>
       </table>
