--- a/app/views/editorial/_viste_non_utilizzate/_save/ediz_sicontents.html.erb
+++ b/app/views/editorial/_viste_non_utilizzate/_save/ediz_sicontents.html.erb
@@ -46,7 +46,7 @@ In questa pagina:
 
 <!-- inizio sezione loop articoli -->
 <% @art.each do |articolo| %>
-    <% ancora = h(truncate(articolo.titolo, :length => 20).to_slug) %>
+    <% ancora = h(truncate(articolo.subject, :length => 20).to_slug) %>
     <table width="612" border="0" cellpadding="0" cellspacing="0">
       <tr>
         <td width="612" align="center" valign="top" bgcolor="#f4f4f4" style="border-top:1px solid #cccccc; border-bottom:1px solid #cccccc;">
@@ -62,14 +62,14 @@ In questa pagina:
                         image_tag("/images/commons/sections/no-img.jpg", :width => 120 , :id => ancora)
                       end
                     else
-                      image_tag(articolo.immagine_url, :id => ancora, :alt => h(truncate(articolo.titolo, :length => 25)))
+                      image_tag(articolo.immagine_url, :id => ancora, :alt => h(truncate(articolo.subject, :length => 25)))
                     end
                 %>
               </td>
               <!-- titolo  -->
               <td width="470" align="left" valign="top">
                 <font style="font-family:Arial, Helvetica, sans-serif; font-size:16px; color:#003548; text-align: justify;">
-                  <strong> <%= articolo.titolo %>
+                  <strong> <%= articolo.subject %>
                   </strong> </font><br/>
               </td>
             </tr>
