--- a/app/views/editorial/ediz_test.html.erb
+++ b/app/views/editorial/ediz_test.html.erb
@@ -128,7 +128,7 @@
                 <% last_tops=0
                    ancora =""%>
                 <% @art.each do |nart| %>
-                    <% ancora = h(truncate(nart.titolo, :length => 30).to_slug) %>
+                    <% ancora = h(truncate(nart.subject, :length => 30).to_slug) %>
 
                 <table width="612" border="0" cellpadding="0" cellspacing="0">
                 <% if (last_tops != nart.section.top_section_id) %><br />
@@ -164,7 +164,7 @@
                           <td  align="left" valign="center">
 
                             <font style="font-family:Arial, Helvetica, sans-serif; font-size:14px;">
-                              <strong>   <%= link_to(h(nart.titolo ), url_for(:anchor => ancora), :style => 'color:#333333; text-decoration: none;') %> </strong></font><br/>
+                              <strong>   <%= link_to(h(nart.subject ), url_for(:anchor => ancora), :style => 'color:#333333; text-decoration: none;') %> </strong></font><br/>
                           </td>
                         </tr>
                       </table>
@@ -204,7 +204,7 @@
                 <!--fine  dicitura sommario  -->
                 <!-- inizio sezione loop articoli -->
                 <% @art.each do |articolo| %>
-                    <% ancora = h(truncate(articolo.titolo, :length => 30).to_slug) %>
+                    <% ancora = h(truncate(articolo.subject, :length => 30).to_slug) %>
                     <table width="612" border="0" cellpadding="0" cellspacing="0">
                       <tr>
                         <td width="612" align="center" valign="top" bgcolor="#f4f4f4" style="border-top:1px solid #cccccc; border-bottom:1px solid #cccccc;">
@@ -220,14 +220,14 @@
                                         image_tag("/images/commons/sections/no-img.jpg", :width => 120 , :id => ancora)
                                       end
                                     else
-                                      image_tag(articolo.immagine_url, :id => ancora, :alt => h(truncate(articolo.titolo, :length => 25)))
+                                      image_tag(articolo.immagine_url, :id => ancora, :alt => h(truncate(articolo.subject, :length => 25)))
                                     end
                                 %>
                               </td>
                               <!-- titolo  -->
                               <td width="470" align="left" valign="top">
                                 <font style="font-family:Arial, Helvetica, sans-serif; font-size:16px; color:#003548; text-align: justify;">
-                                  <strong> <%= articolo.titolo %>
+                                  <strong> <%= articolo.subject %>
                                   </strong> </font><br/>
                               </td>
                             </tr>
