--- a/app/views/editorial/edizionecopynew.html.erb
+++ b/app/views/editorial/edizionecopynew.html.erb
@@ -92,7 +92,7 @@
 <!-- inizio loop sezione indice -->
 <% last_tops=0 %>
 <% @art.each do |nart| %>
-    <% ancora = h(truncate(nart.titolo, :length => 30).to_slug) %>
+    <% ancora = h(truncate(nart.subject, :length => 30).to_slug) %>
 
     <table width="560" border="0" cellpadding="0" cellspacing="0">
       <% if last_tops != nart.section.top_section_id %>
@@ -132,7 +132,7 @@
               <td width="536" align="left" valign="center">
 
                 <font style="font-family:Arial, Helvetica, sans-serif; font-size:14px;">
-                  <strong>  <%= link_to(h(nart.titolo), url_for(:anchor => ancora), :style => 'color:#333333; text-decoration: none;') %> </strong></font><br/>
+                  <strong>  <%= link_to(h(nart.subject), url_for(:anchor => ancora), :style => 'color:#333333; text-decoration: none;') %> </strong></font><br/>
 
               </td>
             </tr>
@@ -169,7 +169,7 @@
 <!------------------------------------------------------------------------->
 <!-- inizio sezione loop articoli -->
 <% @art.each do |articolo| %>
-    <% ancora = h(truncate(articolo.titolo, :length => 30).to_slug) %>
+    <% ancora = h(truncate(articolo.subject, :length => 30).to_slug) %>
     <table width="560" border="0" cellpadding="0" cellspacing="0">
       <tr>
         <td width="560" align="center" valign="top" bgcolor="#f4f4f4" style="border-top:1px solid #cccccc; border-bottom:1px solid #cccccc;">
@@ -185,14 +185,14 @@
                         image_tag("/images/commons/sections/no-img.jpg", :width => 120, :id => ancora)
                       end
                     else
-                      image_tag(articolo.immagine_url, :id => ancora, :alt => h(truncate(articolo.titolo, :length => 25)))
+                      image_tag(articolo.immagine_url, :id => ancora, :alt => h(truncate(articolo.subject, :length => 25)))
                     end
                 %>
               </td>
               <!-- titolo  -->
               <td width="440" align="left" valign="top">
                 <font style="font-family:Arial, Helvetica, sans-serif; font-size:16px; color:#003548; text-align: justify;">
-                  <strong> <%= articolo.titolo %>
+                  <strong> <%= articolo.subject %>
                   </strong> </font><br/>
               </td>
             </tr>
@@ -220,7 +220,7 @@
               <td width="560" height="33" align="right" valign="top">
 #######################################################
 
-<%= link_to (image_tag("/images/commons/btn_news_y.gif", :width => 107, :height => 29, :alt => 'vedi articolo'), url_for(:controller => 'editorial', :action => "articolo", :topmenu_key => articolo.section.top_section.top_menu.key, :topsection_key => articolo.section.top_section.key, :article_id => articolo.id.to_s, :article_slug => h(truncate(articolo.titolo, :length => 125).to_slug) , :escape => false), :target => '_blank') %>
+<%= link_to (image_tag("/images/commons/btn_news_y.gif", :width => 107, :height => 29, :alt => 'vedi articolo'), url_for(:controller => 'editorial', :action => "articolo", :topmenu_key => articolo.section.top_section.top_menu.key, :topsection_key => articolo.section.top_section.key, :article_id => articolo.id.to_s, :article_slug => h(truncate(articolo.subject, :length => 125).to_slug) , :escape => false), :target => '_blank') %>
 
               </td>
             </tr>
