--- a/app/views/type_organizations/show.html.erb
+++ b/app/views/type_organizations/show.html.erb
@@ -18,16 +18,19 @@
     <% end %>
     </p>
     <p>
-      <%= l(:label_descrizione) %>: 
+      <%= l(:label_descrizione) %>:
+<hr />HTML<br />
       <div class="html">
         <% unless @type_organization.descrizione.nil? %>
           <%= @type_organization.descrizione.html_safe %>
         <% end %>
       </div>
-<--html safe----------------------------------------------------------------------textilizable--> 
+<hr />
+<hr />textilizable<br />
       <div class="wiki">
         <%= textilizable(@type_organization.descrizione) %>
       </div>
+<hr />
     </p>
     <p>
       <%= l(:label_priorita) %>: <%=h @type_organization.priorita %>
