add se_prenotazione in Issue

--- a/app/views/issues/_attributes.html.erb
+++ b/app/views/issues/_attributes.html.erb
@@ -11,10 +11,15 @@
 <p><%= f.check_box :se_visible_data %></p>
 <p><%= f.check_box :se_visible_newsletter %></p>
 <p><%= f.check_box :se_protetto %></p>
+<p><% if !@issue.new_record? && @issue.se_prenotazione %>
+    <%= f.check_box :se_prenotazione, :disabled => true %>
+  <% else %>
+    <%= f.check_box :se_prenotazione %>
+  <% end %>
+</p>
+
 
 <p><%= f.select :priority_id, (@priorities.collect {|p| [p.name, p.id]}), {:required => true}, :disabled => !@issue.leaf? %></p>
-<% if @issue.new_record? %>
-<% end %>
 <p><%= f.select :assigned_to_id, principals_options_for_select(@issue.assignable_users, @issue.assigned_to), :include_blank => true %></p>
 <% unless @project.issue_categories.empty? %>
 <p><%= f.select :category_id, (@project.issue_categories.collect {|c| [c.name, c.id]}), :include_blank => true %>
