--- a/app/views/issues/_form.html.erb
+++ b/app/views/issues/_form.html.erb
@@ -7,7 +7,13 @@
 </p>
 <% end %>
 
-<p><%= f.select :section_id, (Section.all_with_topsection.collect {|c| [c.full_name, c.id]}), :include_blank => false, :required => true, :size => 100, :title => l(:label_section) %></p>
+<p><% if !@issue.new_record? && @issue.se_prenotazione %>
+    <%= f.select :section_id, [[@issue.section.full_name, @issue.section_id]], :include_blank => false, :required => true, :size => 100, :title => l(:label_section) %>
+  <% else %>
+    <%= f.select :section_id, (Section.all_with_topsection.collect {|c| [c.full_name, c.id]}), :include_blank => false, :required => true, :size => 100, :title => l(:label_section) %>
+  <% end %>
+</p>
+
 
 <p><%= f.select :tracker_id, @project.trackers.collect {|t| [t.name, t.id]}, :required => true %></p>
 <%= observe_field :issue_tracker_id, :url => { :action => :new, :project_id => @project, :id => @issue },
