--- a/app/views/editorial/edizione_newsletter.html.erb
+++ b/app/views/editorial/edizione_newsletter.html.erb
@@ -103,7 +103,7 @@
               </font>
             </td>
             <td width="55" valign="bottom" align="right">
-              <%= image_tag "/images/ico/fs.jpg", :width => 50, :height => 50, :border => 0 %>
+              <%= image_tag "/images/ico/fs.png", :width => 50, :height => 50, :border => 0 %>
             </td>
           </tr>
         </table>
