--- a/public/stylesheets/style.plus.css
+++ b/public/stylesheets/style.plus.css
@@ -727,7 +727,7 @@ margin-left:-1px;*/
 .fs-postheader-full {
     color: #000000;
     margin-bottom: 10px;
-    font-size: 20px;
+    font-size: 18px;
     line-height: 24px;
     font-family: Arial, Helvetica, Sans-Serif;
     font-weight: normal;
@@ -789,6 +789,7 @@ margin-left:-1px;*/
     font-variant: small-caps;
     text-align: center;
     margin: 0 10px;
+    overflow: hidden;
 }
 
 .fs-block-edizioni {
@@ -864,12 +865,12 @@ margin-left:-1px;*/
     -moz-box-shadow: 0 0 3px 2px rgba(201, 50, 20, 0.9);
     box-shadow: 0 0 3px 2px rgba(238, 232, 170, 0.9);
     padding: 7px;
-    width: 98%;
+    width: 100%;
     margin-top: 7px;
 }
 
 .fs-content .fs-postcontent-convegni {
-    padding: 25px;;
+    padding: 20px;
 
 }
 
@@ -981,9 +982,9 @@ width: 66%;
     -opera-border-radius: 1px;
     -moz-border-radius: 1px;
     color: #000;
-    font-family: 'Allerta', arial ,sans-serif;
-       font-size: 15px;
-       text-transform: uppercase;
+    font-family: 'Allerta', arial, sans-serif;
+    font-size: 15px;
+    text-transform: uppercase;
     margin-bottom: 15px;
 
 }
